# tokentruth

./: Cargo.toml  LICENSE  README.md  prd.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
assets/: demo.tape
commands/: tokentruth-analyze.toml  tokentruth-compare.toml  tokentruth-cost.toml
skills/tokentruth/: SKILL.md
src/: cost.rs  main.rs  model.rs  output.rs  parser.rs  pricing.rs
