[package]
name = "tokentruth"
version = "0.1.0"
edition = "2021"
description = "Independent verification of AI coding agent token-savings claims, computed from raw session transcripts."
license = "MIT"

[[bin]]
name = "tokentruth"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
comfy-table = "7"

[profile.release]
lto = true
strip = true
